--- a/src/components/buttons/MenuButton.astro
+++ b/src/components/buttons/MenuButton.astro
@@ -2,7 +2,7 @@
 import Nav from "../head/Nav.astro";
 ---
 
-<div class="drawer">
+<div class="drawer z-50">
     <input id="my-drawer" type="checkbox" class="drawer-toggle" />
     <div class="drawer-content">
       <label for="my-drawer" class="btn btn-circle swap swap-rotate stroke-current hover:text-primary duration-150">
