--- a/src/components/head/Header.astro
+++ b/src/components/head/Header.astro
@@ -20,14 +20,16 @@ const t = useTranslations(lang);
       <!-- кнопка меню -->
       <div class="grid grid-flow-col gap-x-5">
         <MenuButton transition:persist />
-        {myStatus.status === 'free' ? <ImFreeLabel /> : <ImBusyLabel />}
+        <div class="place-self-center">
+          {myStatus.status === 'free' ? <ImFreeLabel /> : <ImBusyLabel />}
+        </div>
       </div>
     </div>
     <!-- логотип -->
     <Logo transition:persist />
     <div class="navbar-end flex space-x-6">
       <div class="flex space-x-2"></div>
-      <div data-da=".socials,648,first" transition:persist>
+      <div data-da=".socials,648,0" transition:persist>
         <ShowWeather transition:persist />
       </div>
       <!-- заказать -->
