--- a/src/components/CTA.astro
+++ b/src/components/CTA.astro
@@ -10,7 +10,7 @@ const t = useTranslations(lang);
 <section class="relative isolate overflow-hidden px-6 pt-16 sm:px-16 md:pt-24 grid lg:gap-x-20 lg:px-24 lg:pt-0 w-full">
 
 
-  <svg viewBox="0 0 1024 1024" class="absolute left-1/2 top-1/2 -z-10 h-[64rem] w-[64rem] -translate-y-1/2 [mask-image:radial-gradient(closest-side,white,transparent)] sm:left-full sm:-ml-80 lg:left-1/2 lg:ml-0 lg:-translate-x-1/2 lg:translate-y-0" aria-hidden="true">
+  <svg viewBox="0 0 1024 1024" class="absolute left-1/2 top-1/2 -z-10 h-[64rem] w-[64rem] [mask-image:radial-gradient(closest-side,white,transparent)] sm:left-full sm:-ml-80 lg:left-1/2 lg:ml-0 -translate-x-1/2 translate-y-0" aria-hidden="true">
     <circle cx="512" cy="512" r="512" fill="url(#759c1415-0410-454c-8f7c-9a820de03641)" fill-opacity="0.7" />
     <defs>
       <radialGradient id="759c1415-0410-454c-8f7c-9a820de03641">
@@ -27,7 +27,7 @@ const t = useTranslations(lang);
     </div>
 
 
-    <div class="mb-10 md:mb-0 mt-10 grid grid-flow-col place-items-center place-content-center gap-x-10">
+    <div class="mb-16 md:mb-0 mt-10 grid grid-flow-col place-items-center place-content-center gap-x-10">
       <OrderButton />
       <a href={`/${lang}/portfolio`} class="inline-block text-sm font-semibold leading-6 hover:text-primary duration-150">{t('nav.portfolio')}<span aria-hidden="true">→</span></a>
     </div>
