--- a/src/pages/ua/contact/index.astro
+++ b/src/pages/ua/contact/index.astro
@@ -10,7 +10,7 @@ const t = useTranslations(lang);
 
 <Layout title=`${t('nav.contact')} - VRATSKYI`>
   <section class="mx-auto w-full max-w-[800px] my-[200px]">
-    <div class="mx-auto w-full max-w-2xl">
+    <div class="mx-auto w-full max-w-2xl p-5">
       <h1>Зв'язатися зі мною</h1>
       <p>
         Розкажіть про свій проєкт коротко, що б ви хотіли і що очікуєте,
