--- a/src/pages/ru/portfolio/index.astro
+++ b/src/pages/ru/portfolio/index.astro
@@ -27,21 +27,21 @@ const t = useTranslations(lang);
 
         <div class="grid lg:grid-flow-col gap-x-20 place-content-center place-items-start mt-[60px] lg:mt-[200px] p-5 md:p-0">
 
-            <div class="p-5">
-                <h1 class="relative">{t('portfolio.main.title')} <span class="badge badge-primary text-xs absolute top-0 ml-3">{t('portfolio.main.title.label')}</span>
+            <div class="p-5 w-full max-w-md md:max-w-full h-full">
+                <h1 class="relative text-xl">{t('portfolio.main.title')} <span class="badge badge-primary text-xs absolute top-0 ml-3">{t('portfolio.main.title.label')}</span>
             </h1>
             <p class="prose">
               {t('portfolio.main.description')}
             </p>
-            <div class="grid grid-flow-col gap-x-5 place-content-center place-items-start mt-10 bg-base-200/20 backdrop-blur-3xl rounded-box p-5 lg:p-10">
-                <div class="grid place-items-center">
+          <div class="grid grid-flow-col gap-x-5 place-content-center place-items-start w-full overflow-x-auto snap-x snap-mandatory mt-10 bg-base-200/20 backdrop-blur-3xl rounded-box p-5 lg:p-10">
+                <div class="grid place-items-center scroll-ml-5 snap-center ml-40">
                   <svg class="inline-block w-8 h-8 text-primary" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
                     <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M10 3H8a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-2m-4 0h4m-4 0v1m4-1v1m0 0a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v0m4 0h-4m2 10.008" />
                   </svg>
                     <p class="text-xs">{t('portfolio.project.futures.1')}</p>
                 </div>
                 <div class="divider divider-horizontal"></div>
-                <div class="grid place-items-center">
+                <div class="grid place-items-center scroll-ml-5 snap-center">
                     <svg class="inline-block w-8 h-8 text-primary" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
                         <mask id="lineMdSpeedLoop0">
                           <path fill="none" stroke="#fff" stroke-dasharray="56" stroke-dashoffset="56" stroke-linecap="round" stroke-width="1.5" d="M5 19V19C4.69726 19 4.41165 18.8506 4.25702 18.5904C3.45852 17.2464 3 15.6767 3 14C3 9.02944 7.02944 5 12 5C16.9706 5 21 9.02944 21 14C21 15.6767 20.5415 17.2464 19.743 18.5904C19.5884 18.8506 19.3027 19 19 19z">
@@ -63,17 +63,17 @@ const t = useTranslations(lang);
                     <p class="text-xs">{t('portfolio.project.futures.2')}</p>
                 </div>
                 <div class="divider divider-horizontal"></div>
-                <div class="grid place-items-center">
+                <div class="grid place-items-center scroll-ml-5 snap-center">
                     <svg class="inline-block w-8 h-8 text-primary" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 15 15">
                         <path fill="currentColor" fill-rule="evenodd" d="M3.88 1h7.24c.403 0 .735 0 1.006.022c.281.023.54.072.782.196a2 2 0 0 1 .874.874c.124.243.173.501.196.782c.022.27.022.603.022 1.005v7.241c0 .403 0 .735-.022 1.006c-.023.281-.072.54-.196.782a2 2 0 0 1-.874.874c-.243.124-.501.173-.782.196c-.27.022-.603.022-1.005.022H3.88c-.403 0-.735 0-1.006-.022c-.281-.023-.54-.072-.782-.196a2 2 0 0 1-.874-.874c-.124-.243-.173-.501-.196-.782C1 11.856 1 11.523 1 11.12V3.88c0-.403 0-.735.022-1.006c.023-.281.072-.54.196-.782a2 2 0 0 1 .874-.874c.243-.124.501-.173.782-.196C3.144 1 3.477 1 3.88 1m-.924 1.019c-.22.018-.332.05-.41.09a1 1 0 0 0-.437.437c-.04.078-.072.19-.09.41C2 3.18 2 3.472 2 3.9V7h5V2H3.9c-.428 0-.72 0-.944.019M7 8H2v3.1c0 .428 0 .72.019.944c.018.22.05.332.09.41a1 1 0 0 0 .437.437c.078.04.19.072.41.09c.225.019.516.019.944.019H7zm1 0h5v3.1c0 .428 0 .72-.019.944c-.018.22-.05.332-.09.41a1 1 0 0 1-.437.437c-.078.04-.19.072-.41.09c-.225.019-.516.019-.944.019H8zm5-1H8V2h3.1c.428 0 .72 0 .944.019c.22.018.332.05.41.09a1 1 0 0 1 .437.437c.04.078.072.19.09.41c.019.225.019.516.019.944z" clip-rule="evenodd" />
                     </svg>
                     <p class="text-xs">{t('portfolio.project.futures.3')}</p>
                 </div>
             </div>
-            <div class="grid grid-flow-col gap-x-10 place-content-center place-items-center mt-10">
+            <div class="grid grid-flow-col gap-x-5 place-content-center place-items-center mt-5 lg:mt-10">
               <svg class="inline-block w-8 h-8" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 32 32">
                 <path fill="url(#vscodeIconsFileTypeAstro0)" d="M11.025 20.499c-.532 1.75-.154 4.184 1.105 5.331v-.042l.042-.112c.154-.741.756-1.203 1.526-1.175c.713.014 1.12.392 1.217 1.217c.042.308.042.616.056.938v.098c0 .7.196 1.371.588 1.959c.35.56.84.993 1.497 1.287l-.028-.056l-.028-.112c-.49-1.469-.14-2.49 1.147-3.358l.392-.266l.868-.573a4.254 4.254 0 0 0 1.791-3.037c.07-.532 0-1.05-.154-1.553l-.21.14c-1.945 1.035-4.17 1.4-6.325.98c-1.301-.197-2.56-.56-3.498-1.652z" />
-                <path fill="#fff" d="M4.925 20.191s3.736-1.82 7.486-1.82l2.84-8.759c.098-.42.406-.7.756-.7s.644.28.756.714l2.826 8.746c4.45 0 7.487 1.82 7.487 1.82L20.709 2.84c-.168-.518-.49-.84-.896-.84h-7.612c-.406 0-.7.322-.896.84z" />
+                <path fill="currentColor" d="M4.925 20.191s3.736-1.82 7.486-1.82l2.84-8.759c.098-.42.406-.7.756-.7s.644.28.756.714l2.826 8.746c4.45 0 7.487 1.82 7.487 1.82L20.709 2.84c-.168-.518-.49-.84-.896-.84h-7.612c-.406 0-.7.322-.896.84z" />
                 <defs>
                   <linearGradient id="vscodeIconsFileTypeAstro0" x1="8.19" x2="16.91" y1="23" y2="18.89" gradientTransform="translate(-.673 -2.198)scale(1.3993)" gradientUnits="userSpaceOnUse">
                     <stop offset="0" stop-color="#d83333" />
@@ -112,7 +112,7 @@ const t = useTranslations(lang);
               </svg>
             </div>
             </div>
-            <div class="order-first lg:order-last not-prose">
+            <div class="order-first lg:order-last max-w-[320px] mx-auto not-prose">
                 <div class="mockup-browser bg-base-300">
                     <div class="mockup-browser-toolbar">
                       <div class="input"><a class="hover:text-primary duration-150 not-prose text-sm" href="https://h2ovoda.com.ua" target="_blank">https://h2ovoda.com.ua</a></div>
@@ -126,7 +126,7 @@ const t = useTranslations(lang);
         </div>
     </div>
     
-    <div class="grid place-items-center place-content-center prose lg:prose-xl text-center mx-auto mb-10">
+    <div class="grid place-items-center place-content-center prose lg:prose-xl text-center mx-auto mt-20 mb-10">
       <h2 class="font-black text-primary not-prose text-6xl mb-5">{t('portfolio.title')}</h2>
       <p>
         {t('portfolio.subdesc')} <br />
