--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -28,7 +28,7 @@ const t = useTranslations(lang);
     </div> 
     <aside>
       <div class="grid gap-y-5">
-        <div class="grid grid-flow-col gap-x-5 place-items-center">
+        <div class="grid md:grid-flow-col gap-y-2 md:gap-x-5 place-items-center">
           <a class="link link-hover hover:text-primary duration-150" href={`/${lang}/terms`}>{t('nav.terms')}</a>
           <a class="link link-hover hover:text-primary duration-150" href={`/${lang}/privacy-policy`}>{t('nav.privacy')}</a>
         </div>
