--- a/src/pages/ru/portfolio/index.astro
+++ b/src/pages/ru/portfolio/index.astro
@@ -112,7 +112,7 @@ const t = useTranslations(lang);
               </svg>
             </div>
             </div>
-            <div class="order-first lg:order-last max-w-[320px] mx-auto not-prose">
+            <div class="order-first lg:order-last max-w-[320px] lg:max-w-full mx-auto not-prose">
                 <div class="mockup-browser bg-base-300">
                     <div class="mockup-browser-toolbar">
                       <div class="input"><a class="hover:text-primary duration-150 not-prose text-sm" href="https://h2ovoda.com.ua" target="_blank">https://h2ovoda.com.ua</a></div>
