--- a/src/pages/ru/portfolio/vratskyi-blog.astro
+++ b/src/pages/ru/portfolio/vratskyi-blog.astro
@@ -11,14 +11,7 @@ const t = useTranslations(lang);
 <Layout title='VRATSKYI - vratskyi-blog'>
 
       
-    <div class="relative overflow-hidden w-full h-full">
-        <div class="hidden sm:absolute sm:-top-10 sm:right-1/2 sm:-z-10 sm:mr-10 sm:block sm:transform-gpu sm:blur-3xl" aria-hidden="true">
-            <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-20" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
-          </div>
-          <div class="absolute -top-52 left-1/2 -z-10 -translate-x-1/2 transform-gpu blur-3xl sm:top-[-28rem] sm:ml-16 sm:translate-x-0 sm:transform-gpu" aria-hidden="true">
-            <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-20" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
-          </div>
-
+    <div class="h-full mb-[400px]">
           <div class="grid place-content-start place-self-start mt-[80px] w-full max-w-[1280px] mx-auto">
               <div class="text-sm breadcrumbs">
                   <ul>
@@ -57,19 +50,19 @@ const t = useTranslations(lang);
           </div>
 
           <div class="grid lg:grid-flow-col gap-x-20 place-content-center place-items-start mt-[60px] lg:mt-[80px] p-5 md:p-0">
-            <div class="p-5">
+            <div class="p-5 w-full max-w-md md:max-w-full h-full">
                 <h1 class="relative">{t('portfolio.card.2.title')}
             </h1>
             <p class="prose" set:html={t('portfolio.card.2.page.description')}></p>
-            <div class="grid grid-flow-col gap-x-5 place-content-center place-items-start mt-10 bg-base-200/20 backdrop-blur-3xl rounded-box p-5 lg:p-10">
-                <div class="grid place-items-center">
+            <div class="grid grid-flow-col gap-x-5 place-content-center place-items-start w-full overflow-x-auto snap-x snap-mandatory mt-10 bg-base-200/20 backdrop-blur-3xl rounded-box p-5 lg:p-10">
+                <div class="grid place-items-center scroll-ml-5 snap-center ml-40 md:ml-0">
                   <svg class="inline-block w-8 h-8 text-primary" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
                     <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M10 3H8a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-2m-4 0h4m-4 0v1m4-1v1m0 0a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v0m4 0h-4m2 10.008" />
                   </svg>
                     <p class="text-xs">{t('portfolio.card.2.futures.1')}</p>
                 </div>
                 <div class="divider divider-horizontal"></div>
-                <div class="grid place-items-center">
+                <div class="grid place-items-center scroll-ml-5 snap-center">
                     <svg class="inline-block w-8 h-8 text-primary" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
                         <mask id="lineMdSpeedLoop0">
                           <path fill="none" stroke="#fff" stroke-dasharray="56" stroke-dashoffset="56" stroke-linecap="round" stroke-width="1.5" d="M5 19V19C4.69726 19 4.41165 18.8506 4.25702 18.5904C3.45852 17.2464 3 15.6767 3 14C3 9.02944 7.02944 5 12 5C16.9706 5 21 9.02944 21 14C21 15.6767 20.5415 17.2464 19.743 18.5904C19.5884 18.8506 19.3027 19 19 19z">
@@ -98,7 +91,7 @@ const t = useTranslations(lang);
                     <p class="text-xs">{t('portfolio.card.2.futures.3')}</p>
                 </div>
             </div>
-            <div class="grid grid-flow-col gap-x-10 place-content-center place-items-center mt-10">
+            <div class="grid grid-flow-col gap-x-10 place-content-center place-items-center mt-5 md:mt-10">
               <svg class="inline-block w-8 h-8" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 32 32">
                 <path fill="url(#vscodeIconsFileTypeAstro0)" d="M11.025 20.499c-.532 1.75-.154 4.184 1.105 5.331v-.042l.042-.112c.154-.741.756-1.203 1.526-1.175c.713.014 1.12.392 1.217 1.217c.042.308.042.616.056.938v.098c0 .7.196 1.371.588 1.959c.35.56.84.993 1.497 1.287l-.028-.056l-.028-.112c-.49-1.469-.14-2.49 1.147-3.358l.392-.266l.868-.573a4.254 4.254 0 0 0 1.791-3.037c.07-.532 0-1.05-.154-1.553l-.21.14c-1.945 1.035-4.17 1.4-6.325.98c-1.301-.197-2.56-.56-3.498-1.652z" />
                 <path fill="currentColor" d="M4.925 20.191s3.736-1.82 7.486-1.82l2.84-8.759c.098-.42.406-.7.756-.7s.644.28.756.714l2.826 8.746c4.45 0 7.487 1.82 7.487 1.82L20.709 2.84c-.168-.518-.49-.84-.896-.84h-7.612c-.406 0-.7.322-.896.84z" />
@@ -134,7 +127,7 @@ const t = useTranslations(lang);
               </svg>
             </div>
             </div>
-            <div class="order-first lg:order-last not-prose">
+            <div class="order-first lg:order-last max-w-[320px] lg:max-w-full mx-auto not-prose">
                 <div class="mockup-browser bg-base-300">
                     <div class="mockup-browser-toolbar">
                       <div class="input"><a class="hover:text-primary duration-150 not-prose text-sm" href="https://vratskyi.pages.dev/en/" target="_blank">https://vratskyi.pages.dev/en/</a></div>
