--- a/src/pages/ru/portfolio/index.astro
+++ b/src/pages/ru/portfolio/index.astro
@@ -164,7 +164,7 @@ const t = useTranslations(lang);
        description={t('portfolio.card.2.description')}
        activeButton={{ 
          title: `${t('portfolio.card.2.activeButton')}`,
-         link: `/${lang}/portfolio/vratskyi-blog`
+         link: `/${lang}/portfolio/vratskyiblog`
        }},
        exturnalButton={{ 
          title: `${t('portfolio.card.2.exturnalButton')}`,
@@ -182,7 +182,7 @@ const t = useTranslations(lang);
         description={t('portfolio.card.3.description')}
         activeButton={{ 
           title: `${t('portfolio.card.3.activeButton')}`,
-          link: `/${lang}/portfolio/h2ovoda-old`
+          link: `/${lang}/portfolio/h2ovodaold`
         }},
         exturnalButton={{ 
           title: `${t('portfolio.card.3.exturnalButton')}`,
