--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -7,88 +7,92 @@ const t = useTranslations(lang);
 
 <div class="mt-5 grid place-content-center">
     
-                <form id="my-form" action="https://formspree.io/f/xbjnprpp" method="POST" class="grid place-content-center mt-10 gap-y-5">
-                  <div class="grid md:grid-flow-col md:place-content-center gap-y-2 md:gap-x-2 w-full">
-                      <label class="input input-bordered flex items-center gap-2">
-                          {t('contact.form.name')}
-                          <input type="text" name="name" maxlength="20" autocomplete="name" class="grow hover:cursor-text" value="" placeholder="Oleksii" required />
-                      </label>
-                      <label class="input input-bordered flex items-center gap-2">
-                          Email
-                          <input type="email" name="email" autocomplete="email" class="grow hover:cursor-text" value="" placeholder="example@gmail.com" required />
-                      </label>
-                  </div>
-                  <label class="input input-bordered flex items-center gap-2">
-                      {t('contact.form.site')}
-                      <input type="text" name="site" autocomplete="name" class="grow hover:cursor-text" value="" placeholder="example.com" />
-                  </label>
-                  <textarea id="contactText" name="message" value="" maxlength="900" placeholder={t('contact.form.textarea')} required class="textarea textarea-bordered textarea-lg w-full max-w-full placeholder:text-sm hover:cursor-text" ></textarea>
-                  <div class="label justify-end">
-                      <span id="contactTextCounter" class="label-text-alt">0/900</span>
-                  </div>
-                  <div class="grid grid-flow-col place-content-between">
-                      <button type="submit" class="btn btn-sm btn-primary place-self-start">{t('contact.form.button.submit')}</button>
-                  </div>
-                  <div class="mt-5">
-                      <p id="my-form-status" class="prose"></p>
-                  </div>
-              </form>
+    <form id="my-form" action="https://formspree.io/f/xbjnprpp" method="POST" class="grid place-content-center mt-10 gap-y-5">
+      <div class="grid md:grid-flow-col md:place-content-center gap-y-2 md:gap-x-2 w-full">
+          <label class="input input-bordered flex items-center gap-2">
+              {t('contact.form.name')}
+              <input type="text" name="name" maxlength="20" autocomplete="name" class="grow hover:cursor-text" value="" placeholder="Oleksii" required />
+          </label>
+          <label class="input input-bordered flex items-center gap-2">
+              Email
+              <input type="email" name="email" autocomplete="email" class="grow hover:cursor-text" value="" placeholder="example@gmail.com" required />
+          </label>
+      </div>
+      <label class="input input-bordered flex items-center gap-2">
+          {t('contact.form.site')}
+          <input type="text" name="site" autocomplete="name" class="grow hover:cursor-text" value="" placeholder="example.com" />
+      </label>
+      <textarea id="contactText" name="message" value="" maxlength="900" placeholder={t('contact.form.textarea')} required class="textarea textarea-bordered textarea-lg w-full max-w-full placeholder:text-sm hover:cursor-text" ></textarea>
+      <div class="label justify-end">
+          <span id="contactTextCounter" class="label-text-alt">0/900</span>
+      </div>
+      <div class="grid grid-flow-col place-content-between">
+          <button type="submit" class="btn btn-sm btn-primary place-self-start">{t('contact.form.button.submit')}</button>
+      </div>
+      <div class="mt-5">
+          <p id="my-form-status" class="prose"></p>
+      </div>
+  </form>
 </div>
 
 <script type="text/javascript" transition:persist data-astro-rerun is:inline>
 document.addEventListener('astro:page-load', () => {
-  const form = document.getElementById("my-form");
-  const status = document.getElementById("my-form-status");
+    const form = document.getElementById("my-form");
+    const status = document.getElementById("my-form-status");
 
-  // Получаем текущую локаль из URL
-  const lang = window.location.pathname.split('/')[1];
+    if (form && status) { // Проверяем, что элементы формы и статуса существуют
+        // Получаем текущую локаль из URL
+        const lang = window.location.pathname.split('/')[1];
 
-  async function handleSubmit(event) {
-    event.preventDefault();
+        async function handleSubmit(event) {
+            event.preventDefault();
 
-    // Получаем данные из полей формы
-    const formData = new FormData(form);
-    const data = {};
-    formData.forEach((value, key) => {
-      data[key] = value;
-    });
+            // Получаем данные из полей формы
+            const formData = new FormData(form);
+            const data = {};
+            formData.forEach((value, key) => {
+                data[key] = value;
+            });
 
-    // Отправляем данные на сервер
-    fetch(form.action, {
-      method: form.method,
-      body: JSON.stringify(data), // Преобразуем данные в формат JSON
-      headers: {
-        'Content-Type': 'application/json',
-      },
-    }).then(response => {
-      if (response.ok) {
-        window.location.href = `/${lang}/contact/success`; // Вставляем текущую локаль в ссылку
-        form.reset();
-      } else {
-        response.json().then(data => {
-          if (data && data.errors) {
-            status.innerHTML = data.errors.map(error => error.message).join(", ");
-          } else {
-            window.location.href = `/${lang}/contact/failed`; // Вставляем текущую локаль в ссылку
-          }
-        });
-      }
-    }).catch(error => {
-        window.location.href = `/${lang}/contact/error`; // Вставляем текущую локаль в ссылку
-    });
-  }
+            // Отправляем данные на сервер
+            fetch(form.action, {
+                method: form.method,
+                body: JSON.stringify(data), // Преобразуем данные в формат JSON
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+            }).then(response => {
+                if (response.ok) {
+                    window.location.href = `/${lang}/contact/success`; // Вставляем текущую локаль в ссылку
+                    form.reset();
+                } else {
+                    response.json().then(data => {
+                        if (data && data.errors) {
+                            status.innerHTML = data.errors.map(error => error.message).join(", ");
+                        } else {
+                            window.location.href = `/${lang}/contact/failed`; // Вставляем текущую локаль в ссылку
+                        }
+                    });
+                }
+            }).catch(error => {
+                window.location.href = `/${lang}/contact/error`; // Вставляем текущую локаль в ссылку
+            });
+        }
 
-  form.addEventListener("submit", handleSubmit);
+        form.addEventListener("submit", handleSubmit);
+    }
 });
 </script>
 
 <script type="text/javascript" transition:persist data-astro-rerun is:inline>
 
-    document.addEventListener('astro:page-load', () => {
-        const counter = document.getElementById('contactTextCounter');
-        const contactText = document.getElementById('contactText');
+document.addEventListener('astro:page-load', () => {
+    const counter = document.getElementById('contactTextCounter');
+    const contactText = document.getElementById('contactText');
 
-            contactText.addEventListener('input', () => {
+    // Проверяем существование элементов counter и contactText
+    if (counter && contactText) {
+        contactText.addEventListener('input', () => {
             let count = contactText.value.length; // Получаем текущую длину текста в поле ввода
 
             // Если поле ввода пустое, счетчик устанавливается в 0
@@ -111,7 +115,7 @@ document.addEventListener('astro:page-load', () => {
             // Обновляем значение счетчика
             counter.textContent = `${count}/900`;
         });
-
-    });
+    }
+});
 
 </script>
