--- a/src/pages/ua/portfolio/lmdlvivua.astro
+++ b/src/pages/ua/portfolio/lmdlvivua.astro
@@ -11,14 +11,7 @@ const t = useTranslations(lang);
 <Layout title='VRATSKYI - h2ovoda'>
 
       
-    <div class="relative overflow-hidden w-full h-full">
-        <div class="hidden sm:absolute sm:-top-10 sm:right-1/2 sm:-z-10 sm:mr-10 sm:block sm:transform-gpu sm:blur-3xl" aria-hidden="true">
-            <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-20" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
-          </div>
-          <div class="absolute -top-52 left-1/2 -z-10 -translate-x-1/2 transform-gpu blur-3xl sm:top-[-28rem] sm:ml-16 sm:translate-x-0 sm:transform-gpu" aria-hidden="true">
-            <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-20" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
-          </div>
-
+    <div class="h-full mb-[400px]">
           <div class="grid place-content-start place-self-start mt-[80px] w-full max-w-[1280px] mx-auto">
               <div class="text-sm breadcrumbs">
                   <ul>
@@ -56,20 +49,20 @@ const t = useTranslations(lang);
                 </div>
           </div>
 
-          <div class="grid lg:grid-flow-col gap-x-20 place-content-center place-items-start mt-[60px] lg:mt-[80px] p-5 md:p-0">
-            <div class="p-5">
+          <div class="grid lg:grid-flow-col gap-x-20 place-content-center place-items-start w-full mt-[60px] lg:mt-[80px] p-5 md:p-0">
+            <div class="p-5 w-full max-w-md md:max-w-full h-full">
                 <h1 class="relative">{t('portfolio.card.5.title')}
             </h1>
             <p class="prose" set:html={t('portfolio.card.5.page.description')}></p>
-            <div class="grid grid-flow-col gap-x-5 place-content-center place-items-start mt-10 bg-base-200/20 backdrop-blur-3xl rounded-box p-5 lg:p-10">
-                <div class="grid place-items-center">
+            <div class="grid grid-flow-col gap-x-5 place-content-center place-items-start overflow-x-auto snap-x snap-mandatory mt-10 bg-base-200/20 backdrop-blur-3xl rounded-box p-5 lg:p-10">
+                <div class="grid place-items-center scroll-ml-5 snap-center ml-40 md:ml-0">
                   <svg class="inline-block w-8 h-8 text-primary" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
                     <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M10 3H8a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-2m-4 0h4m-4 0v1m4-1v1m0 0a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v0m4 0h-4m2 10.008" />
                   </svg>
                     <p class="text-xs">{t('portfolio.card.5.futures.1')}</p>
                 </div>
                 <div class="divider divider-horizontal"></div>
-                <div class="grid place-items-center">
+                <div class="grid place-items-center scroll-ml-5 snap-center">
                     <svg class="inline-block w-8 h-8 text-primary" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
                         <mask id="lineMdSpeedLoop0">
                           <path fill="none" stroke="#fff" stroke-dasharray="56" stroke-dashoffset="56" stroke-linecap="round" stroke-width="1.5" d="M5 19V19C4.69726 19 4.41165 18.8506 4.25702 18.5904C3.45852 17.2464 3 15.6767 3 14C3 9.02944 7.02944 5 12 5C16.9706 5 21 9.02944 21 14C21 15.6767 20.5415 17.2464 19.743 18.5904C19.5884 18.8506 19.3027 19 19 19z">
@@ -91,14 +84,14 @@ const t = useTranslations(lang);
                     <p class="text-xs">{t('portfolio.card.5.futures.2')}</p>
                 </div>
                 <div class="divider divider-horizontal"></div>
-                <div class="grid place-items-center">
+                <div class="grid place-items-center scroll-ml-5 snap-center">
                     <svg class="inline-block w-8 h-8 text-primary" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 15 15">
                         <path fill="currentColor" fill-rule="evenodd" d="M3.88 1h7.24c.403 0 .735 0 1.006.022c.281.023.54.072.782.196a2 2 0 0 1 .874.874c.124.243.173.501.196.782c.022.27.022.603.022 1.005v7.241c0 .403 0 .735-.022 1.006c-.023.281-.072.54-.196.782a2 2 0 0 1-.874.874c-.243.124-.501.173-.782.196c-.27.022-.603.022-1.005.022H3.88c-.403 0-.735 0-1.006-.022c-.281-.023-.54-.072-.782-.196a2 2 0 0 1-.874-.874c-.124-.243-.173-.501-.196-.782C1 11.856 1 11.523 1 11.12V3.88c0-.403 0-.735.022-1.006c.023-.281.072-.54.196-.782a2 2 0 0 1 .874-.874c.243-.124.501-.173.782-.196C3.144 1 3.477 1 3.88 1m-.924 1.019c-.22.018-.332.05-.41.09a1 1 0 0 0-.437.437c-.04.078-.072.19-.09.41C2 3.18 2 3.472 2 3.9V7h5V2H3.9c-.428 0-.72 0-.944.019M7 8H2v3.1c0 .428 0 .72.019.944c.018.22.05.332.09.41a1 1 0 0 0 .437.437c.078.04.19.072.41.09c.225.019.516.019.944.019H7zm1 0h5v3.1c0 .428 0 .72-.019.944c-.018.22-.05.332-.09.41a1 1 0 0 1-.437.437c-.078.04-.19.072-.41.09c-.225.019-.516.019-.944.019H8zm5-1H8V2h3.1c.428 0 .72 0 .944.019c.22.018.332.05.41.09a1 1 0 0 1 .437.437c.04.078.072.19.09.41c.019.225.019.516.019.944z" clip-rule="evenodd" />
                     </svg>
                     <p class="text-xs">{t('portfolio.card.5.futures.3')}</p>
                 </div>
             </div>
-            <div class="grid grid-flow-col gap-x-10 place-content-center place-items-center mt-10">
+            <div class="grid grid-flow-col gap-x-10 place-content-center place-items-center mt-5 md:mt-10">
                 <svg class="inline-block w-8 h-8" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 256 256">
                     <g fill="none">
                         <rect width="256" height="256" fill="#0073aa" rx="60" />
@@ -135,7 +128,7 @@ const t = useTranslations(lang);
               </svg>
             </div>
             </div>
-            <div class="order-first lg:order-last not-prose">
+            <div class="order-first lg:order-last max-w-[320px] lg:max-w-full mx-auto not-prose not-prose">
                 <div class="mockup-browser bg-base-300">
                     <div class="mockup-browser-toolbar">
                       <div class="input"><a class="hover:text-primary duration-150 not-prose text-sm" href="https://lmd.lviv.ua/" target="_blank">https://lmd.lviv.ua/</a></div>
