--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -28,7 +28,7 @@ const t = useTranslations(lang);
       </div>
       <div class="grid grid-flow-col place-content-between">
           <button type="submit" class="btn btn-sm btn-primary place-self-start">{t('contact.form.button.submit')}</button>
-          <div class="g-recaptcha" data-sitekey="6Ld3rLEpAAAAAFDl7xWEg4-esV2ngSW0mm3ycdyJ" data-size="compact"></div>
+          <div class="g-recaptcha" data-sitekey="6Ld3rLEpAAAAAFDl7xWEg4-esV2ngSW0mm3ycdyJ"></div>
       </div>
       <div class="mt-5">
           <p id="my-form-status" class="prose"></p>
