--- a/src/pages/ru/portfolio/h2ovoda.astro
+++ b/src/pages/ru/portfolio/h2ovoda.astro
@@ -139,7 +139,7 @@ const t = useTranslations(lang);
                       <div class="input"><a class="hover:text-primary duration-150 not-prose text-sm" href="https://h2ovoda.com.ua" target="_blank">https://h2ovoda.com.ua</a></div>
                     </div>
                     <div class="flex justify-center bg-base-200">
-                        <Image src={h2ovoda} transition:name='Сайт доставки воды 2.0' class="max-w-[600px] max-h-[400px] w-full h-full object-cover object-center" format='avif' alt='Сайт доставки воды 2.0' width='600' height='400' />
+                        <Image src={h2ovoda} class="max-w-[600px] max-h-[400px] w-full h-full object-cover object-center" format='avif' alt='Сайт доставки воды 2.0' width='600' height='400' />
                     </div>
                   </div>
             </div>
