--- a/src/pages/ru/portfolio/vratskyiblog.astro
+++ b/src/pages/ru/portfolio/vratskyiblog.astro
@@ -133,7 +133,7 @@ const t = useTranslations(lang);
                       <div class="input"><a class="hover:text-primary duration-150 not-prose text-sm" href="https://vratskyi.pages.dev/en/" target="_blank">https://vratskyi.pages.dev/en/</a></div>
                     </div>
                     <div class="flex justify-center bg-base-200">
-                        <Image src={vratskyiBlog} transition:name={t('portfolio.card.2.title')} class="max-w-[600px] max-h-[400px] w-full h-full object-cover object-center" format='avif' alt='Персональный блог и портфолио' width='600' height='400' />
+                        <Image src={vratskyiBlog} class="max-w-[600px] max-h-[400px] w-full h-full object-cover object-center" format='avif' alt='Персональный блог и портфолио' width='600' height='400' />
                     </div>
                   </div>
             </div>
