--- a/src/pages/ua/portfolio/byshikat.astro
+++ b/src/pages/ua/portfolio/byshikat.astro
@@ -134,7 +134,7 @@ const t = useTranslations(lang);
                       <div class="input"><a class="hover:text-primary duration-150 not-prose text-sm" href="https://byshikat.com/" target="_blank">https://byshikat.com/</a></div>
                     </div>
                     <div class="flex justify-center bg-base-200">
-                        <Image src={byshikat} transition:name='Byshikat интернет-магазин обуви' class="max-w-[600px] max-h-[400px] w-full h-full object-cover object-center" format='avif' alt='Byshikat интернет-магазин обуви' width='600' height='400' />
+                        <Image src={byshikat} class="max-w-[600px] max-h-[400px] w-full h-full object-cover object-center" format='avif' alt='Byshikat интернет-магазин обуви' width='600' height='400' />
                     </div>
                   </div>
             </div>
